# ProjectEuler-rs

./: Cargo.toml  LICENSE-APACHE  README.md
src/: collatz.rs  fibonacci.rs  lib.rs  number_misc.rs  permutation.rs  prime.rs  triangular.rs
