[package]
name = "project-euler-rs"
version = "0.1.0"
authors = ["komori-n <ikamat.kmr@gmail.com>"]
edition = "2018"
description = "My solutions for ProjectEuler(https://projecteuler.net) in Rust language"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
